# JSON_Project_Tracker

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
src/projectlog/: core.py  lint.py  queries.py  schema.json  timeutils.py
tests/: test_append.py  test_naming.py  test_queries.py  test_schema.py
