[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projectlog"
version = "0.1.0"
description = "Append-only project activity logging with queryable JSON records"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Your Name", email = "your_email@example.com" }
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest", "jsonschema", "sphinx", "renku-sphinx-theme"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
